# 3_5-cwork

./: CMakeLists.txt  README.md
include/: binarydatabase.h  data.h  database.h  inputtable.h  inputvalidator.h  qsort.h  validatableinput.h
src/: CMakeLists.txt  binarydatabase.cpp  data.cpp  database.cpp  inputtable.cpp  main.cpp  validatableinput.cpp
test/: CMakeLists.txt
test/db/: binary.cpp
